[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/interface/inventory/item_background/type_1.png" type="Texture" id=1]
[ext_resource path="res://assets/item/consumable/health_potion.png" type="Texture" id=2]
[ext_resource path="res://assets/font/bit_potion.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/player/item.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[node name="Item" type="TextureRect"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 1 )
script = ExtResource( 4 )

[node name="ItemTexture" type="TextureRect" parent="."]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 18.0
margin_bottom = 18.0
texture = ExtResource( 2 )
expand = true

[node name="Amount" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.0
margin_top = -8.0
margin_right = -2.0
margin_bottom = -1.0
rect_min_size = Vector2( 4, 7 )
custom_fonts/font = SubResource( 1 )
text = "9"
align = 2
valign = 1

[connection signal="mouse_entered" from="." to="." method="on_item_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="on_item_mouse_exited"]
